fix: :bug: vertical align in button fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -369,6 +369,7 @@ button {
 
 button {
     display: inline-flex;
+    align-items: center;
 }
 
 div.has-help {
